Fixed spacing in statistics block

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -10129,7 +10129,7 @@ fieldset[disabled] .explore-map-button a.focus {
 }
 .block-home-page-statistics dl {
   display: block;
-  margin: 5em auto 0;
+  margin: 3em auto 0;
   padding: 0;
   padding-right: 1.5em;
   overflow: hidden;
