--- a/docroot/themes/iucn_who/less/theme/blocks.less
+++ b/docroot/themes/iucn_who/less/theme/blocks.less
@@ -522,7 +522,7 @@
     }
   });
 
-  dl { display: block; margin: 5em auto 0; padding: 0; padding-right: 1.5em; overflow: hidden; }
+  dl { display: block; margin: 3em auto 0; padding: 0; padding-right: 1.5em; overflow: hidden; }
   dt, dd {
     float: left;
     width: 50%;
